--- a/index.html
+++ b/index.html
@@ -226,14 +226,14 @@
                              watch:true
                 });
 
-var userpos;
-
-function onLocationFound(e) {
-           userpos = L.circleMarker(e.latlng, {
+var userpos = L.circleMarker('', {
                   color: '#d3d3d3',
     	          fillColor: '#4c8bf5',
     	          fillOpacity: 0.9,
-	          radius: 7}).addTo(map);
+	          radius: 7});
+
+function onLocationFound(e) {
+           userpos.setLatLng(e.latlng).addTo(map);
 };
 
 map.on('locationfound', onLocationFound);
