--- a/index.html
+++ b/index.html
@@ -204,8 +204,9 @@
     				onAdd: function(map) {
         				var img = L.DomUtil.create('img');
 
-        				img.src = "LSUS_logo.png";
+        				img.src = "LSUS_logo.png" alt = "LSUS Logo";
         				img.style.width = '900px';
+					img.alt = "LSUS Logo";
 
         				return img;
     				},
