--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     				onAdd: function(map) {
         				var img = L.DomUtil.create('img');
 
-        				img.src = "LSUS_logo.png";
+        				img.src = "LSUS_logo.pn";
         				img.style.width = '900px';
 					img.alt = "LSUS Logo";
 
