--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 			}
 		}).error(function() {});
 		
-                map.fitBounds(buildings.getBounds());
+                map.fitBounds(background.getBounds());
 
 		//add watermark to lower left
 		L.Control.Watermark = L.Control.extend({
