--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     			return new L.Control.Watermark(opts);
 		}
 		
-		L.control.watermark({ position: 'bottomleft' }).addTo(map);
+		L.control.watermark({ position: "bottomleft" }).addTo(map);
 		
 		//add user location
                 map.locate({setView: false, 
