--- a/index.html
+++ b/index.html
@@ -196,12 +196,12 @@
 			}
 		}).error(function() {});
 		
-		//geojson for invisible points to help with bounds
+		//geojson for invisible polygons to help with bounds
 		var bounds_pts = {"type":"FeatureCollection","features":[
-			{"type":"Feature","properties":{},"geometry":{"coordinates":[-93.70730303227901, 32.42800305643529],"type":"Point"}},
-	    		{"type":"Feature","properties":{},"geometry":{"coordinates":[-93.70705157518387,32.424644407342655],"type":"Point"}},
-			{"type":"Feature","properties":{},"geometry":{"coordinates":[-93.70171129703522,32.43443813676175],"type":"Polygon"}},
-		        {"type":"Feature","properties":{},"geometry":{"coordinates":[-93.6958108, 32.4272857],"type":"Point"}}]};
+			{"type":"Feature","properties":{},"geometry":{"coordinates":[[[-93.70953399036371,32.42933618156704],[-93.70929563677073,32.42933618156704],[-93.70929563677073,32.429477009680014],[-93.70953399036371,32.429477009680014],[-93.70953399036371,32.42933618156704]]],"type": "Polygon"}},
+	    		{"type":"Feature","properties":{},"geometry":{"coordinates":[[[-93.70679292404743,32.42460825301325],[-93.70679292404743,32.42450765609584],[-93.70660224117348, 32.42450765609584],[-93.70660224117348,32.42460825301325],[-93.70679292404743,32.42460825301325]]],"type": "Polygon"}},
+			{"type":"Feature","properties":{},"geometry":{"coordinates":[[[-93.69418141723949,32.425756156242514],[-93.69418141723949,32.42563544146461],[-93.69399073436554,32.42563544146461
+      		        {"type":"Feature","properties":{},"geometry":{"coordinates":[[[-93.70233311019308,32.434728835176244],[-93.70233311019308,32.43458510095542],[-93.70214922143892,32.4345851009554],[-93.70214922143892,32.434728835176244],[-93.70233311019308,32.434728835176244]]],"type": "Polygon"}}]};
 		
 		//add invisible features to phantom geojson
 		var phantom = L.geoJson(bounds_pts, {
