--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                                  keyboard: true
 				 });
 		
-		var tl = L.latlng(32.534728835176244, -93.69953399036371)
-		var br = L.latlng(32.525635441464614, -93.65418141723949)
+		var tl = L.latLng(32.434728835176244, -93.70953399036371)
+		var br = L.latLng(32.425635441464614, -93.69018141723949)
 		var bounds = L.latLngBounds(tl, br);
 		map.fitBounds(bounds);
 
