--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			tileSize: 512,
 			maxZoom: 18,
 			zoomOffset: -1,
-			id: 'mapbox/streets-v11',
+			id: 'mapbox.satellite',
 			accessToken: 'pk.eyJ1IjoibW1hZ3VpZ2EiLCJhIjoiY2xiMmMyemsyMDA5czNwcnBhZDFiaWcyeCJ9.TzzxHt4q9OIY6wJn5AzJdw'
 		}).addTo(map);
 		
