--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		map.getPane('back').style.zIndex = 200;
 		
 		//add Mapbox tilelayer
-       		L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+       		L.tileLayer('https://api.mapbox.com/v4/{id}/10/{x}/{y}.png?access_token={accessToken}', {
 			attribution: '© <a href="https://www.mapbox.com/about/maps/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> <strong><a href="https://www.mapbox.com/map-feedback/" target="_blank">Improve this map</a></strong>',
 			tileSize: 512,
 			maxZoom: 18,
