--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	margin: 0.2em 0;
 	font-family: Oswald}
 	}
-       @media screen and (max-height: 650px) {
+       @media screen and (orientation: landscape, max-height: 550px) {
   	h1 {font-size: 24px;}
         h2 {font-size: 23px;}
         h3 {font-size: 22px;}
