--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             "type": "Feature",
             "properties": {
               "building": "Noel Memorial <br>Library",
-              "otherpois": "<a href='https://www.lsus.edu/student-life/student-success-center#:~:text=Phone%3A318%2D795%2D2486,%3A%208am%20%2D%204%3A30%20pm' target='_blank' rel='noopener noreferrer'>Student Success Center</a> <br><a href='https://www.lsus.edu/student-life/career-services' target='_blank' rel='noopener noreferrer'>Career Center</a> <br><a href='https://www.lsus.edu/student-life/food-services' target='_blank' rel='noopener noreferrer'>Stacks Coffee Shop</a>"
+              "otherpois": "<a href='https://www.lsus.edu/student-life/student-success-center' target='_blank' rel='noopener noreferrer'>Student Success Center</a> <br><a href='https://www.lsus.edu/student-life/career-services' target='_blank' rel='noopener noreferrer'>Career Center</a> <br><a href='https://www.lsus.edu/student-life/food-services' target='_blank' rel='noopener noreferrer'>Stacks Coffee Shop</a>"
             },
             "geometry": {
               "type": "Polygon",
