--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 	    
       var phcurl = 'PHC.png';
       var phcbounds = [[32.43067183737912, -93.70283055608273], [32.43127219854516, -93.70389787445068]];
-      L.imageOverlay(phcurl, pchbounds, {zIndex:1000}).addTo(map);
+      L.imageOverlay(phcurl, phcbounds, {zIndex:1000}).addTo(map);
 	    
       //create function for each feature to create popup content to populate popup
       function onEachFeature(feature, layer) {
