--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         
 <form class="center">
   <select id="locationSelect" onchange="myFunction()">
-  <option>What are you looking for?</option>
+  <option value="" disabled selected>What are you looking for?</option>
     <option value="the Administration Building on the second floor (Room 257).">Academic Affairs</option>
 <option value="the Administration Building on the second floor.">Alumni Relations</option>
 <option value="the University Center on the first floor.">Campus Wide Computer Lab</option>
