--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         margin-right: auto;
       }
 
-      #mapdiv {
+      #map {
         resize: horizontal;
         max-width: 85%;
         height: calc(45vh - 16px);
@@ -151,7 +151,7 @@
     <!-- add title text -->
     <h1>LSUS Campus Map</h1>
     <!--add div for map -->
-    <div id="mapdiv"></div>
+    <div id="map"></div>
     <br>
     <h5>
       <u>Search</u>
