--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       }
 
       .leaflet-popup-content a {
-        text-align: left;
+        text-align: center;
         color: white;
         margin: 0.2em 0;
         font-family: Oswald
