--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
       }
 
 
+.leaflet-popup-content img {
+        display: block;
+        max-width: 85%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
       .center {
         margin: auto;
         width:350px;
