--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 	'fillcolor': '#FDD023',
         'fillopacity': 1.0,
         'color': '#FDD023',
-        'opacity': 1}).bindPopup("<h4>Noel Memorial <br>Library</h4><h6>______________________</h6><br><a href='https://youtu.be/2FMMqT8VqSI?t=179'  target='_blank' rel='noopener noreferrer'><img src= 'NML.PNG' alt='Noel Memorial Library Front' width:'200px'</a><br><a href='https://www.lsus.edu/student-life/student-success-center' target='_blank' rel='noopener noreferrer'>Student Success Center</a> <br><a href='https://www.lsus.edu/student-life/career-services' target='_blank' rel='noopener noreferrer'>Career Center</a><br><a href='https://www.lsus.edu/student-life/food-services' target='_blank' rel='noopener noreferrer'>Stacks Coffee Shop</a>").addTo(map);
+        'opacity': 1}).bindPopup("<h4>Noel Memorial <br>Library</h4><h6>______________________</h6><br><a href='https://youtu.be/2FMMqT8VqSI?t=179'  target='_blank' rel='noopener noreferrer'><img src= 'NML.PNG' alt='Noel Memorial Library Front'</a><br><a href='https://www.lsus.edu/student-life/student-success-center' target='_blank' rel='noopener noreferrer'>Student Success Center</a> <br><a href='https://www.lsus.edu/student-life/career-services' target='_blank' rel='noopener noreferrer'>Career Center</a><br><a href='https://www.lsus.edu/student-life/food-services' target='_blank' rel='noopener noreferrer'>Stacks Coffee Shop</a>").addTo(map);
 
 var BronsongeoJSON = {
   "type": "Feature",
