--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       }
 
       .leaflet-popup-content-wrapper {
-        background-color: #461D7C
+        background-color: #461D7C;
+max-width: 300px;
       }
 
       .leaflet-popup-tip {
