--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ max-width: 300px;
       map.getPane('back').style.zIndex = 200;
       
       //add imgs for building names, no labeling system works well for Leaflet
-      var labels = 'Campus_Map_Labels.png';
+      var labels = 'Campus_Labels.png';
       var labelbounds = [[32.42649826762586, -93.70753055608273], [32.43237219854516, -93.70219787445068]];
       L.imageOverlay(labels, labelbounds, {zIndex:300}).addTo(map);
 		    
