--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ var SciencegeoJSON = {
 	'fillcolor': '#FDD023',
         'fillopacity': 1.0,
         'color': '#FDD023',
-        'opacity': 1}).bindPopup("<h4>Science Building</h4><h6>______________________</h6><br><a href='https://youtu.be/2FMMqT8VqSI?t=303 target='_blank' rel='noopener noreferrer'><img src= 'Science_Building.PNG' alt='Science Building Front'</a><a href='https://www.lsus.edu/academics/undergraduate-programs/biological-sciences' target='_blank' rel='noopener noreferrer'>Biological Sciences</a><br><a href='https://www.lsus.edu/academics/undergraduate-programs/chemistryd' target='_blank' rel='noopener noreferrer'>Chemistry and Physics</a><br><a href='https://www.lsus.edu/community/rrwmi' target='_blank' rel='noopener noreferrer'>Red River Watershed Management Institute</a>").addTo(map);
+        'opacity': 1}).bindPopup("<h4>Science Building</h4><h6>______________________</h6><br><a href='https://youtu.be/2FMMqT8VqSI?t=303' target='_blank' rel='noopener noreferrer'><img src= 'Science_Building.PNG' alt='Science Building Front'</a><a href='https://www.lsus.edu/academics/undergraduate-programs/biological-sciences' target='_blank' rel='noopener noreferrer'>Biological Sciences</a><br><a href='https://www.lsus.edu/academics/undergraduate-programs/chemistryd' target='_blank' rel='noopener noreferrer'>Chemistry and Physics</a><br><a href='https://www.lsus.edu/community/rrwmi' target='_blank' rel='noopener noreferrer'>Red River Watershed Management Institute</a>").addTo(map);
 
 var SLAgeoJSON = {
   "type": "Feature",
